--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Facebook Chats</a>
+      <a class="navbar-brand" href="#"> Chats</a>
     </div>
   </nav>
 
