se agregan las imagenes para cada chat, se agrega la imagen de la mano, pero se deben centrar, adiconalmente debe generarse el nav menu del porte de la columna del chat

--- a/index.html
+++ b/index.html
@@ -21,24 +21,52 @@
     <div class="col-2 bg-light">
       <!-- Contenido de la columna izquierda -->
       <h2>Chats</h2>
+      <!-- Las conversaciones se simulan aca -->
       <ul class="chats-list">
-        <li class="chat-item">Chat 1</li>
-        <li class="chat-item">Chat 2</li>
-        <li class="chat-item">Chat 3</li>
-        <li class="chat-item">Chat 4</li>
-        <li class="chat-item">Chat 5</li>
-        <li class="chat-item">Chat 6</li>
-        <li class="chat-item">Chat 7</li>
-        <li class="chat-item">Chat 8</li>
-        <li class="chat-item">Chat 9</li>
-        <!-- Agrega más elementos de chat aquí -->
+        <!-- cada "li" agregado es un chat -->
+        <li class="chat-item">
+          <img src="assets/img/chat2.jpg" alt="Foto de perfil del chat">
+          Chat 1
+        </li>
+        <li class="chat-item">
+          <img src="assets/img/chat3.jpg" alt="FFoto de perfil del chat">
+          Chat 2
+        </li>
+        <li class="chat-item">
+          <img src="assets/img/chat4.jpg" alt="Foto de perfil del chat">
+          Chat 3
+        </li>
+        <li class="chat-item">
+          <img src="assets/img/chat5.jpg" alt="Foto de perfil del chat">
+          Chat 4
+        </li>
+        <li class="chat-item">
+          <img src="assets/img/chat6.jpg" alt="Foto de perfil del chat">
+          Chat 5
+        </li>
+        <li class="chat-item">
+          <img src="assets/img/chat7.jpg" alt="Foto de perfil del chat">
+          Chat 6
+        </li>
+        <li class="chat-item">
+          <img src="assets/img/chat8.jpg" alt="Foto de perfil del chat">
+          Chat 7
+        </li>
+        <li class="chat-item">
+          <img src="assets/img/chat9.jpg" alt="Foto de perfil del chat">
+          Chat 7
+        </li>
       </ul>
     </div>
 
     <div class="col-10">
       <!-- Contenido de la columna derecha -->
-      <h2>Mensaje seleccionado</h2>
-      <p>Contenido del mensaje seleccionado</p>
+      <div class="message-container">
+        <img id="manos" src="assets/img/hand.png" alt="foto de referencia que se mostrara en la columan del chat">
+        <h2>Comienza El Networking</h2>
+        <p>Presiona el boton <strong>"Nuevo Chat"</strong> para crear nuevas redes de contacto</p>
+        <p>para tu empresa o emprendimiento</p>
+      </div>
     </div>
   </main>
 
